# emojify

./: .gitignore  CLAUDE.md  Makefile  README.md  pyproject.toml
data/scripts/: build_index.py  fetch_data.py  generate_descriptions.py  merge_sources.py
scripts/: test_features.py  test_search.py
src/emojify/: __init__.py  cli.py  config.py  decoder.py  diversity.py  embeddings.py  eval.py  index.py  text_to_emoji.py
tests/: test_cli.py  test_data_pipeline.py  test_decoder.py  test_diversity.py  test_embeddings.py  test_eval.py  test_index.py  test_text_to_emoji.py
tests/eval/: README.md  run_eval.py  test_cases.yaml
