[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "emojify"
version = "0.1.0"
description = "Bidirectional emoji-text translator using embedding-based semantic search"
requires-python = ">=3.11"
dependencies = [
    "click>=8.1",
    "rich>=13.0",
    "numpy>=1.24",
    "openai>=0.28,<1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-mock>=3.10",
    "pyyaml>=6.0",
]

[project.scripts]
emojify = "emojify.cli:cli"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
